[tool.poetry]
name = "weatherforecast"
version = "0.1.0"
description = ""
authors = ["Pablo Lucas <pablo.lucv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twilio = "^8.2.1"
requests = "^2.31.0"
pandas = "^2.0.1"
bs4 = "^0.0.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
